Fix response status and add UserProblemStat service